feature/literature-list: fix docs
