# docs/swagger.json
@@ -26,6 +26,17 @@
                     "search"
                 ],
                 "summary": "Search literature list",
+                "parameters": [
+                    {
+                        "description": "input",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.searchLiteratureRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -66,6 +77,20 @@
             "properties": {
                 "detail": {
                     "type": "string"
+                }
+            }
+        },
+        "v1.searchLiteratureRequest": {
+            "type": "object",
+            "required": [
+                "literature_list"
+            ],
+            "properties": {
+                "literature_list": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
